--- a/index.html
+++ b/index.html
@@ -952,8 +952,8 @@
   <nav>
     <div class="nav-container">
       <a href="#" class="logo">
-        <i class="fas fa-network-wired"></i>
-        <span>Nosentix</span>
+        
+        <span><img src="logo2.png" alt="Nosentix logo" style="width: 150px; height: initial"></span>
       </a>
       <div class="nav-links">
         <a href="#about">About</a>
