added the client testimonials

--- a/index.html
+++ b/index.html
@@ -1161,9 +1161,9 @@
         <div class="testimonial-slider" id="testimonialSlider">
           <div class="testimonial">
             <div class="testimonial-content">
-              Nosentix transformed our digital presence. Their SaaS tools are not only powerful but incredibly intuitive. Our team productivity has increased by 40% since implementation.
-            </div>
-            <div class="testimonial-author">- David Kim, TechLead Innovations</div>
+                Nosentix Network has been my number one when it comes to branding and web design. Dating back to 2024, It has helped in my logo and other design for my company. And It will always be my first choice over and over againll always be m< first choice over and over again
+             </div>
+            <div class="testimonial-author">- Sam Kingsley, Deekinge Limited</div>
           </div>
           <div class="testimonial">
             <div class="testimonial-content">
@@ -1175,7 +1175,7 @@
             <div class="testimonial-content">
               As a startup, we needed solutions that could scale with our growth. Nosentix provided exactly that - flexible, powerful, and cost-effective tools that grow with our business.
             </div>
-            <div class="testimonial-author">- James Wilson, Startup Founder</div>
+            <div class="testimonial-author">- Dee Lights, Startup Founder of Deelights hub</div>
           </div>
         </div>
         
